# zkTI

./: .gitignore  .gitmodules  README.md
datasets/d_duck_identification/: test_answer.csv
groth16/: CMakeLists.txt  README.md  benchmark.sh
groth16/include/: MV_circuit.h  common.h  gadgets.h  libsnark_exporter.h  merkle.h  zkinterface_generated.h  zkinterface_utils.hpp
groth16/include/circuits/: CRH_circuit.h  MV_circuit.h  ZenCrowd_circuit.h  gadgets.h  gadgets2.h
groth16/include/methods/: CRH.h  Float.h  MV.h  TruthInference.h  ZenCrowd.h
groth16/include/zk_proof_system/: groth16.h
groth16/src/: CMakeLIsts.txt  CMakeLists.txt  libsnark_exporter.cpp  main.cpp  merkle.cpp  zkTI_MV.cpp  zkinterface_utils.cpp
methods/: CRH.py  EM.py  GLAD.py  GLAD_original.py  MV.py  README.md  ZC.py  ZenClowd.py  ZenCrowd.py  ZenCrowd2.py  field_addition.py  field_multiplication.py  float.py  run.sh  sigmoid.ipynb  test.py
test/: float.py
